Corrections and updated SA 10, 11, 12 tables of contents

--- a/01_agama/dirgha/DA_23.md
+++ b/01_agama/dirgha/DA_23.md
@@ -224,7 +224,7 @@ The priest said, “Of course, Gautama! I’d be glad to listen.”
 67\. “The ministers told the king, ‘So it is, so it is! It’s as the king says. The country is fortunate, the army is strong, and the treasury is overflowing. You’ve provided for the people so that they want for nothing. They raise their children and are happy together. If the king wants a sacrifice, he may speak with his palace wives and let them know about it.’
 {:#p67}
 
-68\. “The king then did as the minister said. He went into the palace and said to his wives, ‘My country is wealthy, the army is strong, and the treasury is overflowing. I possess many treasures. I want to arrange a large sacrifice.’
+68\. “The king then did as the ministers said. He went into the palace and said to his wives, ‘My country is wealthy, the army is strong, and the treasury is overflowing. I possess many treasures. I want to arrange a large sacrifice.’
 {:#p68}
 
 69\. “Then the wives said to the king, ‘So it is, so it is! It’s as the king says. The country is wealthy, the army is strong, and the treasure is overflowing. He possesses many treasures. If he wants to arrange a large sacrifice, now would be the right time for it.’
@@ -233,7 +233,7 @@ The priest said, “Of course, Gautama! I’d be glad to listen.”
 70\. “The king returned and told the ministers, ‘My country is wealthy, the army is strong, and the treasury is overflowing. I’ve provided for the people so that they want for nothing. They raise their children and are happy together. Now, I want a large sacrifice. I’ve told the palace wives. All of you, tell me what things will be needed for this.’
 {:#p70}
 
-71\. “The ministers then said to the king, ‘So it is, so it is! It’s as the king says. He wants to arrange a large sacrifice and has told the palace wives about it, but he hasn’t told the prince, crown prince, great minister, and the officers. The king should tell them.’
+71\. “The ministers then said to the king, ‘So it is, so it is! It’s as the king says. He wants to arrange a large sacrifice and has told the palace wives about it, but he hasn’t told the princes, crown prince, great minister, and the officers. The king should tell them.’
 {:#p71}
 
 72\. “Hearing what the ministers said, the king then told the princes, crown prince, ministers, and officers, ‘My country is wealthy, the army is strong, and the treasury is overflowing. I want to arrange a large sacrifice.’
@@ -263,7 +263,7 @@ The priest said, “Of course, Gautama! I’d be glad to listen.”
 80\. “Furthermore, that great minister was well-spoken. What he said was gentle, and his meaning and content were complete. This was the third thing.
 {:#p80}
 
-81\. “Furthermore, that prime minister was shrewd, bold, and had no weaknesses. There were no matters of ritual sacrifice he didn’t understand. This was the fourth thing.
+81\. “Furthermore, that great minister was shrewd, bold, and had no weaknesses. There were no matters of ritual sacrifice he didn’t understand. This was the fourth thing.
 {:#p81}
 
 82\. “That king had accomplished these eight things, and his priestly great minister had accomplished these four things. That king then had four aids, three ways of ritual sacrifice, and sixteen ritual requisites.
@@ -272,52 +272,52 @@ The priest said, “Of course, Gautama! I’d be glad to listen.”
 83\. “The priestly great minister went to the king’s newly built house and disclosed to him sixteen things, which dispelled the king’s doubts. What were the sixteen?
 {:#p83}
 
-84\. “The great minister said to the king, ‘Some people say, “Now, the warrior king wants a large sacrifice, but he’s descended from seven generations of fathers and mothers who weren’t genuine, so he’s constantly slighted by other people.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king is descended from seven generations of fathers and mothers who were genuine, so he isn’t slighted by other people.
+84\. “The great minister said to the king, ‘Some people say, “Now, the warrior king wants a large sacrifice, but he’s descended from seven generations of fathers and mothers who weren’t genuine, so he’s constantly slighted by other people.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king is descended from seven generations of fathers and mothers who were genuine, so he isn’t slighted by other people.
 {:#p84}
 
 85\. “‘Sometimes, people say, “Now, the warrior king wants a large sacrifice, but he’s ugly-looking and not a member of a warrior tribe.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king is handsome-looking and a member of a warrior tribe.
 {:#p85}
 
-86\. “Sometimes, people say, ‘Now, the warrior king wants a large sacrifice, but he doesn’t have higher precepts, nor does he possess wisdom.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The virtue of the king’s precepts is higher, and his wisdom is complete.
+86\. “‘Sometimes, people say, “Now, the warrior king wants a large sacrifice, but he doesn’t have higher precepts, nor does he possess wisdom.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The virtue of the king’s precepts is higher, and his wisdom is complete.
 {:#p86}
 
-87\. “Sometimes, people say, ‘Now, the warrior king wants a large sacrifice, but he hasn’t developed skills such as riding elephants, horses, and chariots, nor does he understand the various martial arts.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king has developed these skills and the arts of war and martial techniques. There’s none he doesn’t understand.
+87\. “‘Sometimes, people say, “Now, the warrior king wants a large sacrifice, but he hasn’t developed skills such as riding elephants, horses, and chariots, nor does he understand the various martial arts.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king has developed these skills and the arts of war and martial techniques. There’s none he doesn’t understand.
 {:#p87}
 
-88\. “Sometimes, people say, ‘The king wants a large sacrifice, but he doesn’t have the authority to bring lesser kings together.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king does have great authority that brings lesser kings together.
+88\. “‘Sometimes, people say, “The king wants a large sacrifice, but he doesn’t have the authority to bring lesser kings together.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king does have great authority that brings lesser kings together.
 {:#p88}
 
-89\. “Sometimes, people say, ‘The king wants a large sacrifice, but he isn’t well-spoken. His speech is harsh, and its content and meaning are incomplete.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king is well-spoken. His speech is gentle, and its content and meaning are complete.
+89\. “‘Sometimes, people say, “The king wants a large sacrifice, but he isn’t well-spoken. His speech is harsh, and its content and meaning are incomplete.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king is well-spoken. His speech is gentle, and its content and meaning are complete.
 {:#p89}
 
-90\. “Sometimes, people say, ‘The king wants a large sacrifice, but he doesn’t have much treasure.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king’s treasury is overflowing with much treasure.
+90\. “‘Sometimes, people say, “The king wants a large sacrifice, but he doesn’t have much treasure.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king’s treasury is overflowing with much treasure.
 {:#p90}
 
-91\. “Sometimes, people say, ‘The king wants a large sacrifice, but he lacks shrewdness, and his temperament is timid.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king is shrewd, courageous, and lacks any timidity.
+91\. “‘Sometimes, people say, “The king wants a large sacrifice, but he lacks shrewdness, and his temperament is timid.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king is shrewd, courageous, and lacks any timidity.
 {:#p91}
 
-92\. “Sometimes, people say, ‘The king wants a large sacrifice, but he hasn’t consulted the women in the palace.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king wants a sacrifice, and he consulted the women in the palace beforehand.
+92\. “‘Sometimes, people say, “The king wants a large sacrifice, but he hasn’t consulted the women in the palace.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king wants a sacrifice, and he consulted the women in the palace beforehand.
 {:#p92}
 
-93\. “Sometimes, people say, ‘The king wants a large sacrifice, but he hasn’t consulted the princes or crown prince.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king wants a sacrifice, and he consulted the princes and crown prince beforehand.
+93\. “‘Sometimes, people say, “The king wants a large sacrifice, but he hasn’t consulted the princes or crown prince.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king wants a sacrifice, and he consulted the princes and crown prince beforehand.
 {:#p93}
 
-94\. “Sometimes, people say, ‘The king wants a large sacrifice, but he hasn’t consulted his ministers.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king wants a sacrifice, and he consulted his ministers beforehand.
+94\. “‘Sometimes, people say, “The king wants a large sacrifice, but he hasn’t consulted his ministers.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king wants a sacrifice, and he consulted his ministers beforehand.
 {:#p94}
 
-95\. “Sometimes, people say, ‘The king wants a large sacrifice, but he hasn’t consulted his officers and men.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? The king wants a sacrifice, and he consulted his officers and men beforehand.
+95\. “‘Sometimes, people say, “The king wants a large sacrifice, but he hasn’t consulted his officers and men.” Supposing this were said, it wouldn’t besmirch the king. Why is that? The king wants a sacrifice, and he consulted his officers and men beforehand.
 {:#p95}
 
-96\. “Sometimes, people say, ‘The king wants a large sacrifice, but his priestly great minister is descended from seven generations of fathers and mothers who weren’t genuine, so he’s always slighted by other people.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? I’m descended from seven generations of fathers and mothers who were genuine, so I’m not slighted by other people.
+96\. “‘Sometimes, people say, “The king wants a large sacrifice, but his priestly great minister is descended from seven generations of fathers and mothers who weren’t genuine, so he’s always slighted by other people.” Supposing this were said, it wouldn’t besmirch the king. Why is that? I’m descended from seven generations of fathers and mothers who were genuine, so I’m not slighted by other people.
 {:#p96}
 
-97\. “Sometimes, people say, ‘The king wants a large sacrifice, but his great minister hasn’t mastered the three Vedas, nor can he discern the various scriptures or learn about the subtleties of worldly literature. He isn’t skilled in the way of the great man’s signs, divining fortune and misfortune, or ritual sacrifices and etiquette.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? I’ve mastered the three Vedas, can discern the various scriptures, and have learned about the subtleties of worldly literature. I’m skilled in the way of the great man’s signs, divining fortune and misfortune, and ritual sacrifices and etiquette.
+97\. “‘Sometimes, people say, “The king wants a large sacrifice, but his great minister hasn’t mastered the three Vedas, nor can he discern the various scriptures or learn about the subtleties of worldly literature. He isn’t skilled in the way of the great man’s signs, divining fortune and misfortune, or ritual sacrifices and etiquette.” Supposing this were said, it wouldn’t besmirch the king. Why is that? I’ve mastered the three Vedas, can discern the various scriptures, and have learned about the subtleties of worldly literature. I’m skilled in the way of the great man’s signs, divining fortune and misfortune, and ritual sacrifices and etiquette.
 {:#p97}
 
-98\. “Sometimes, people say, ‘The king wants a large sacrifice, but his great minister isn’t well-spoken. His speech is harsh, and its content and meaning are incomplete.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? I’m well-spoken. My speech is gentle, and its content and meaning are complete.
+98\. “‘Sometimes, people say, “The king wants a large sacrifice, but his great minister isn’t well-spoken. His speech is harsh, and its content and meaning are incomplete.” Supposing this were said, it wouldn’t besmirch the king. Why is that? I’m well-spoken. My speech is gentle, and its content and meaning are complete.
 {:#p98}
 
-99\. “Sometimes, people say, ‘The king wants a large sacrifice, but his priestly great minister isn’t shrewd, his temperament is timid, and he doesn’t understand the way of ritual sacrifice.’ Supposing this were said, it wouldn’t besmirch the king. Why is that? I’m shrewd and courageous, lack any timidity, and there’s nothing about the way of ritual sacrifice that I don’t understand.”
+99\. “‘Sometimes, people say, “The king wants a large sacrifice, but his priestly great minister isn’t shrewd, his temperament is timid, and he doesn’t understand the way of ritual sacrifice.” Supposing this were said, it wouldn’t besmirch the king. Why is that? I’m shrewd and courageous, lack any timidity, and there’s nothing about the way of ritual sacrifice that I don’t understand.’”
 {:#p99}
 
 100\. The Buddha told Kūṭatāṇḍya, “The king had some doubts about those sixteen points, but the great minister disclosed these sixteen things to him.”
@@ -353,13 +353,13 @@ The priest said, “Of course, Gautama! I’d be glad to listen.”
 110\. “Priest, later the king prepared a large sacrifice to the east, and his wife and concubines then provided these treasures to it.
 {:#p110}
 
-111\. “The prince and crown prince heard that the king had left the new palace on the fifteenth-day full moon, lit a large bonfire in front of it, held up a vessel of oil, poured it on the fire, and called out, ‘I offer this! I offer this!’ The prince and crown prince brought treasures to the king and told him, ‘These treasures are to help the king conduct his large sacrifice.’
+111\. “The princes and crown prince heard that the king had left the new palace on the fifteenth-day full moon, lit a large bonfire in front of it, held up a vessel of oil, poured it on the fire, and called out, ‘I offer this! I offer this!’ The princes and crown prince brought treasures to the king and told him, ‘These treasures are to help the king conduct his large sacrifice.’
 {:#p111}
 
 112\. “The king said, ‘Stop, stop! You have supported it, and my own wealth is great. It’ll be sufficient for the ritual sacrifice.’
 {:#p112}
 
-113\. “The prince and crown prince then thought to themselves, ‘It wouldn’t be right for us to take these treasures back. If the king holds a large sacrifice to the south, then we’ll go and contribute to it.’
+113\. “The princes and crown prince then thought to themselves, ‘It wouldn’t be right for us to take these treasures back. If the king holds a large sacrifice to the south, then we’ll go and contribute to it.’
 {:#p113}
 
 114\. “Thus, the great minister brought a treasure and said, ‘I wanted to help the king with the ritual sacrifice to the west.’ …
@@ -412,9 +412,9 @@ The Buddha said, “There is.”
 127\. “What is it?”
 {:#p127}
 
-The Buddha said, “Erecting monasteries and raised halls for the Saṅgha of the four directions is a gift that’s much greater than that of the three ways of ritual sacrifice and possession of sixteen ritual requisites or supporting the Saṅgha and not discontinuing it.”
+The Buddha said, “Erecting monasteries and raised halls for the Saṅgha in the four directions is a gift that’s much greater than that of the three ways of ritual sacrifice and possession of sixteen ritual requisites or supporting the Saṅgha and not discontinuing it.”
 
-128\. “Is there something else that’s greater than this virtue of erecting monasteries and raised halls for the <em>saṅgha</em> in the four directions, which is itself greater than that of the three ways of ritual sacrifice and possession of sixteen ritual requisites or supporting the Saṅgha and not discontinuing it?”
+128\. “Is there something else that’s greater than this virtue of erecting monasteries and raised halls for the Saṅgha in the four directions, which is itself greater than that of the three ways of ritual sacrifice and possession of sixteen ritual requisites or supporting the Saṅgha and not discontinuing it?”
 {:#p128}
 
 The Buddha said, “There is.”
@@ -494,7 +494,7 @@ Should support the three jewels.”
 143\. A group of monks heard that Kūṭatāṇḍya had supported the Buddha for seven days and then fell ill and died not long afterward. They thought to themselves, “That man’s life has ended, but where did he go?”
 {:#p143}
 
-144\. Those monks went to the Buddha, bowed their heads at his feet, and sat to one side. They asked, “Now that Kūṭatāṇḍya ’s life has ended, where will he be born?”
+144\. Those monks went to the Buddha, bowed their heads at his feet, and sat to one side. They asked, “Now that Kūṭatāṇḍya’s life has ended, where will he be born?”
 {:#p144}
 
 145\. The Buddha told the monks, “That man purely cultivated the religious practice and accomplished one state after the next, and he wasn’t disturbed by anything in the teaching. Because he ended the five lower fetters, his <em>parinirvāṇa</em> was in the present. He didn’t return to this world.”
