--- a/01_agama/madhyama/MA_200.md
+++ b/01_agama/madhyama/MA_200.md
@@ -19,20 +19,20 @@ next: MA_204.html
 2\. It was then that the monk Ariṣṭa, who before was Gṛdhabādhi, gave rise to this bad view: “I know the Bhagavān thus explains the teaching: ‘Engaging in desires is no obstruction.’”
 {:#p2}
 
-3\. After the monks heard this, they went to the monk Ariṣṭa and asked, “Ariṣṭa, is it true that you say this: ‘I know the Bhagavān thus explains the teaching: “Engaging in desires is no obstruction”?’
+3\. After the monks heard this, they went to the monk Ariṣṭa and asked, “Ariṣṭa, is it true that you say this: ‘I know the Bhagavān thus explains the teaching: “Engaging in desires is no obstruction”?’”
 {:#p3}
 
 Ariṣṭa then answered, “Venerables, I really do know that the Bhagavān thus explains the teaching: ‘Engaging in desires is no obstruction.’”
 
-4\. The monks reprimanded Ariṣṭa, ‘Don’t say that; don’t misrepresent the Bhagavān. Misrepresenting the Bhagavān is not good, nor does the Bhagavān teach that way. Ariṣṭa, desire is an obstruction. The Bhagavān has explained that desire is an obstruction in measureless ways. Ariṣṭa, you can quickly abandon this bad view!”
+4\. The monks reprimanded Ariṣṭa, “Don’t say that; don’t misrepresent the Bhagavān. Misrepresenting the Bhagavān is not good, nor does the Bhagavān teach that way. Ariṣṭa, desire is an obstruction. The Bhagavān has explained that desire is an obstruction in measureless ways. Ariṣṭa, you can quickly abandon this bad view!”
 {:#p4}
 
 After he was reprimanded by those monks, the monk Ariṣṭa held to this bad view forcefully. He said to one of them, “This is the truth! The rest is a falsehood!” He said this three times.
 
-5\. Being unable to convince the monk Ariṣṭa to abandon this bad view, they got up from their seats and departed. They went to the Buddha, bowed their heads as his feet, and withdrew to sit to one side. They said, “Bhagavān, the monk Ariṣṭa has formed this bad view: ‘I know the Bhagavān thus explains the teaching: ‘Engaging in desires is no obstruction.’
+5\. Being unable to convince the monk Ariṣṭa to abandon this bad view, they got up from their seats and departed. They went to the Buddha, bowed their heads as his feet, and withdrew to sit to one side. They said, “Bhagavān, the monk Ariṣṭa has formed this bad view: ‘I know the Bhagavān thus explains the teaching: “Engaging in desires is no obstruction.”’
 {:#p5}
 
-6\. “Bhagavān, after we heard about it, we went to the monk Ariṣṭa and asked him, ‘Ariṣṭa, is it true that you say this: ‘I know the Bhagavān thus explains the teaching: “Engaging in desires is no obstruction”?’
+6\. “Bhagavān, after we heard about it, we went to the monk Ariṣṭa and asked him, ‘Ariṣṭa, is it true that you say this: “I know the Bhagavān thus explains the teaching: ‘Engaging in desires is no obstruction’”?’
 {:#p6}
 
 “Ariṣṭa replied to us, ‘Venerables, I really know that the Bhagavān thus explains the teaching, “Engaging in desires is no obstruction.”’
@@ -42,12 +42,12 @@ After he was reprimanded by those monks, the monk Ariṣṭa held to this bad vi
 
 “After we reprimanded him, he held to this bad view forcefully. He said to one of us, ‘This is the truth! The rest is false!’ He said this three times. Bhagavān, since we were unable to convince him to abandon this bad view, we got up from our seats and departed.”
 
-8\. After the Bhagavān heard this, he told one of the monks, ‘Go to that monk Ariṣṭa and tell him, ‘The Bhagavān summons you!’”
+8\. After the Bhagavān heard this, he told one of the monks, “Go to that monk Ariṣṭa and tell him, ‘The Bhagavān summons you!’”
 {:#p8}
 
-That monk then did as the Bhagavān instructed. He got up from his seat, bowed his head at the Buddha’s feet, circled him three times, and departed. He went to the monk Ariṣṭa and told him, ‘The Bhagavān summons you!’ The monk Ariṣṭa then went to the Buddha, bowed his head at his feet, and withdrew to sit to one side.
+That monk then did as the Bhagavān instructed. He got up from his seat, bowed his head at the Buddha’s feet, circled him three times, and departed. He went to the monk Ariṣṭa and told him, “The Bhagavān summons you!” The monk Ariṣṭa then went to the Buddha, bowed his head at his feet, and withdrew to sit to one side.
 
-9\. The Bhagavān asked him, “Ariṣṭa, is it true that you’ve said this, ‘I know the Bhagavān thus explains the teaching: “Engaging in desires is no obstruction”?’
+9\. The Bhagavān asked him, “Ariṣṭa, is it true that you’ve said this, ‘I know the Bhagavān thus explains the teaching: “Engaging in desires is no obstruction”?’”
 {:#p9}
 
 Ariṣṭa answered him, “Bhagavān, I really know that the Bhagavān thus explains the teaching: ‘Engaging in desires is no obstruction.’”
@@ -108,8 +108,10 @@ The monks answered, “We know the Bhagavān explains the teaching this way: ‘
 {:#p25}
 
 26\. “They then put the raft on their right shoulder or carry it on their head. What do you think about that plan? Will this raft be of help to them?”
-The monks replied, “No.”
 {:#p26}
+
+The monks replied, “No.”
+
 
 27\. The Bhagavān told them, “How would he get more help from this raft? That person thinks, ‘This raft of mine was quite helpful. After riding this raft, I safely made it from that side over to this one. Perhaps I could put this raft back in the water, or perhaps I could put it on the shore and leave it there.’
 {:#p27}
@@ -133,7 +135,7 @@ The monks then replied, “It’ll be helpful.”
 32\. “[5] Something is viewed like this: ‘Whether it’s seen, heard, recognized, or known, what’s obtained or observed, and what’s considered by the mind, it goes from this life to that life or from that life to this life.’ [He thinks]: ‘None of them are possessed by me, I am not possessed by them, nor are they the soul.’ Wisely observing it this way, he knows it as it really is.
 {:#p32}
 
-33\. “[6] Something is viewed like this: ‘This is the soul, this is the world, and this is me. I will exist in the afterlife, being permanent and unchanging. I’ll be eternal and not subject to decay.’ [He thinks:] ‘None of them are possessed by me, I am not possessed by them, nor are they the soul.’ Wisely observing it this way, he knows it as it really is.
+33\. “[6] Something is viewed like this: ‘This is the soul, this is the world, and this is me. I will exist in the afterlife, being permanent and unchanging. I’ll be eternal and not subject to decay.’ [He thinks:] ‘None of them are possessed by me, I am not possessed by them, nor are they the soul.’ Wisely observing it this way, he knows it as it really is.”
 {:#p33}
 
 #### Internal and External Fear
@@ -245,7 +247,7 @@ The monks answered, “So it is, Bhagavān. It’s a perfect statement and view,
 
 #### Misrepresenting the Tathāgata
 
-61\. “Thus, Indra, the god Īśāna, Brahmā, and their retinues search and aren’t able to find a consciousness that the correctly liberated Tathāgata relies upon, such as ‘the Tathāgata is Brahmā,’ ‘the Tathāgata is cooled,’ ‘the Tathāgata is not anguished,’ or ‘the Tathāgata is not different.’ I thus explain, ‘Ascetics and priests misrepresent me. They speak falsely and not truly: “The ascetic Gautama guides without any supposition. He claims that a really existent sentient being is ended, ceased, and destroyed.” If this were so, the absence of self wouldn’t be explained. The Tathāgata explains the absence of sorrow in the present life. If another person ridicules the Tathāgata, assaults the Tathāgata with numerous hateful insults, the Tathāgata causes them to abide with no hate or resentment and never become harmful.’
+61\. “Thus, Indra, the god Īśāna, Brahmā, and their retinues search and aren’t able to find a consciousness that the correctly liberated Tathāgata relies upon, such as ‘The Tathāgata is Brahmā,’ ‘The Tathāgata is cooled,’ ‘The Tathāgata is not anguished,’ or ‘The Tathāgata is not different.’ I thus explain, ‘Ascetics and priests misrepresent me. They speak falsely and not truly: “The ascetic Gautama guides without any supposition. He claims that a really existent sentient being is ended, ceased, and destroyed.” If this were so, the absence of self wouldn’t be explained. The Tathāgata explains the absence of sorrow in the present life. If another person ridicules the Tathāgata, assaults the Tathāgata with numerous hateful insults, the Tathāgata causes them to abide with no hate or resentment and never become harmful.’
 {:#p61}
 
 62\. “When people ridicule the Tathāgata and assault him with numerous hateful insults, what does the Tathāgata think? The Tathāgata thinks this: ‘Did I do something or make something in the past that caused this to take place?’ That’s what the Tathāgata thinks about the words that ridicule the Tathāgata and assault him with numerous insults.
