--- a/01_agama/samyukta/35/SA35_40-42.md
+++ b/01_agama/samyukta/35/SA35_40-42.md
@@ -14,7 +14,7 @@ next: SA35_43-45.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Because of what’s existence, what’s cause, being bound by what, adherence to what, and viewing what as self do sentient beings make such views and such statements as this? ‘There’s no generosity, no coming together, no teaching, and no good or bad destinies that result from actions. There’s no present life or another life, no mother, no father, and no sentient beings. There are no arhats in the world who correctly arrive at the right destination, whether in the present life or another life, and who see the teaching and know they’ve fully realized it: “My births have been ended, the religious practice has been established, the task has been accomplished. I myself know that I won’t be subject to a later existence.”’[\[2\]](#n2){:#ref2}
+2\. It was then that the Bhagavān addressed the monks, “Because of what’s existence, what’s cause, being bound by what, adherence to what, and viewing what as self do sentient beings make such views and such statements as this? ‘There’s no generosity, no coming together, no teaching, and no good or bad destinies that result from actions. There’s no present life or another life, no mother, no father, and no sentient beings. There are no arhats in the world who correctly arrive at the right destination, whether in the present life or another life, and who see the teaching and know they’ve fully realized it: “My births have been ended, the religious practice has been established, the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”[\[2\]](#n2){:#ref2}
 {: #p2}
 
 3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …”
