typo (stupid note ref insertion bug)

--- a/01_agama/madhyama/MA_159.md
+++ b/01_agama/madhyama/MA_159.md
@@ -159,7 +159,7 @@ next: MA_176.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.682a28'>世尊答曰： 「忍辱溫良依涅槃住。」</td>
-    <td>The Bhagavān replied, “The basis of patience and gentleness is <em>5irvāṇa</em>.”<sup id="ref5"><a href="#n5">5</a></sup></td>
+    <td>The Bhagavān replied, “The basis of patience and gentleness is <em>nirvāṇa</em>.”<sup id="ref5"><a href="#n5">5</a></sup></td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.682a29'>梵志即復問曰： 「瞿曇，涅槃何所依住？」</td>
