--- a/01_agama/madhyama/MA_034.md
+++ b/01_agama/madhyama/MA_034.md
@@ -4,7 +4,7 @@ title: 'The Medium Discourses | Chapter 4: Unprecedented Things | 34. Bakula'
 type: kramdown
 base: ../../../
 previous: MA_031.html
-next: MA_041.html
+next: MA_036.html
 ---
 
 <h1><a href='index.html'>The Medium Discourses</a></h1>
@@ -92,6 +92,10 @@ next: MA_041.html
   <tr>
     <td class='ch' title='t26.1.475c13'>尊者薄拘羅所說如是。 彼時，異學及諸比丘聞所說已，歡喜，奉行。</td>
     <td id='p17'>17. This is what Venerable Bakula said. When that heretic and the monks heard what he taught, they rejoiced and approved.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.475c15'>薄拘羅經第三竟 (九百八十字)</td>
+    <td class='sutra_end'></td>
   </tr>
 </table>
 
