--- a/01_agama/madhyama/MA_190.md
+++ b/01_agama/madhyama/MA_190.md
@@ -87,15 +87,15 @@ next: MA_200.html
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0736c27" target="_blank">T26.1.736c27-8a2</a>. Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/mn121" target="_blank">MN 121</a> in Pali and <a href="https://suttacentral.net/d290" target="_blank">Toh 290</a> in Tibetan.</p>
 <p>The only significant difference between this version and MN 121 is that the abode that’s neither with nor without conception is missing here. Instead, the text proceeds to the <em>samādhi</em> that’s without perception from the abode of nothingness. Beyond this, however, the two <em>sūtra</em>s are nearly identical if we overlook the usual minor differences in wording and the placement of metaphors in the narrative. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>Hall of Mṛgāra’s Mother</em>. C. 鹿子母堂, P. <em>migāramātupāsāda</em>, S. <em>mṛgāramātuḥ prāsāda</em>. This was a meeting hall donated to the <em>saṅgha</em> by the laywoman Viśākhā (P. Visākhā). She was given the epithet “Mṛgāra’s Mother” because her husband Mṛgāra took to calling her “mother” after she introduced him to the Buddha’s teaching. Her husband’s name, Mṛgāra, is derived from the root <em>mṛga</em>, which means “animal” or “deer.” This is the reason his name was translated to C. as “young deer” (鹿子). [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>Śākya City</em>. C. 釋都邑, P. <em>sakyānaṁ nigamo</em>. This cryptic place name might be intended to refer to Kapilavastu (P. <em>kapilavatthu</em>). The C. term 都邑 usually refers to a large regional or capitol city. The land of the Śākyans was a small hinterland affiliated with Kosala, and Kapilavastu was not likely to be a very large city. This would explain why may have been referred to as a “town” in Pali. [<a href="#ref3">back</a>]</p></li>
-<li id="n4"><p>This is an important point to understand about the Buddhist concept of emptiness. Emptiness is not itself a self-existent abstraction, but a way of describing the absence of one thing in another. This is true of other uses of emptiness in Buddhist texts, such as <a href="../samyukta/01/SA1_48.html" target="_blank">SĀ 1.48 (265)</a>, where metaphors of emptiness are used to describe the insubstantial nature of the five aggregates. Later Prajñāpāramitā-inspired works referred to emptiness much more broadly and abstractly, but it still meant the absence of an intrinsic essence in things, not to a self-existent vacuum or nothingness. Here, the point is made that something (like the Hall of Migara’s Mother) can be empty of one thing (elephants and horses) but still contain something else (the assembly of monks). [<a href="#ref4">back</a>]</p></li>
+<li id="n3"><p><em>Śākya City</em>. C. 釋都邑, P. <em>sakyānaṁ nigamo</em>. This cryptic place name might be intended to refer to Kapilavastu (P. <em>kapilavatthu</em>). The C. term 都邑 usually refers to a large regional or capitol city. The land of the Śākyans was a small hinterland affiliated with Kosala, and Kapilavastu was not likely to be a very large city. This would explain why it was called a “town” in Pali. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>This is an important point to understand about the Buddhist concept of emptiness. Emptiness is not itself a self-existent abstraction, but a way of describing the absence of one thing in another. This is true of other uses of emptiness in Buddhist texts, such as <a href="../samyukta/01/SA1_48.html" target="_blank">SĀ 1.48 (265)</a>, where metaphors of emptiness are used to describe the insubstantial nature of the five aggregates. Later Prajñāpāramitā-inspired works referred to emptiness much more broadly and abstractly, but it still meant the absence of an intrinsic essence in things, not to a self-existent vacuum or nothingness. Here, the point is made that something (like the Hall of Mṛgāra’s Mother) can be empty of one thing (elephants and horses) but still contain something else (the assembly of monks). [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p>The parallel for C. 疲勞 (“weary, exhausted”) is P. <em>darathā</em> (“stress, anxiety”), which would confirm that the weariness is psychological rather than physical.</p>
 <p>The remainder of this discourse describes a practice of emptying one’s mind of the weariness caused by experiences (specifically, conceptualizations or perceptions). It begins by emptying oneself of the weariness caused by human society and progresses with a gradual reduction of conceptual experience to increasingly subtle levels until all concepts are stopped in a <em>samādhi</em> without perceptions.</p>
-<p>This idea of gradually reducing conceptualization appears roughly equivalent to the framework of meditative attainment that extended the four meditations with four formless <em>samādhi</em>s. The more common version of this framework culminates with the cessation of conceptualization and experience (P. <em>saññāvedayitanirodha</em>) or a <em>samādhi</em> of complete cessation (C. 滅盡定). This <em>sūtra</em> seems to be an alternate version of that framework, which might explain why the initial steps involves seclusion from human society and the natural world outside of it. They would refer practicing the four meditations in seclusion before attaining the formless <em>samādhi</em>s. [<a href="#ref5">back</a>]</p></li>
+<p>This idea of gradually reducing conceptualization appears roughly equivalent to the framework of meditative attainment that extended the four meditations with four formless <em>samādhi</em>s. The more common version of this framework culminates with the cessation of conceptualization and experience (P. <em>saññāvedayitanirodha</em>) or a <em>samādhi</em> of complete cessation (C. 滅盡定). This <em>sūtra</em> seems to be an alternate version of that framework, which might explain why the initial steps involve seclusion from human society and the natural world outside of it. They would refer to practicing the four meditations in seclusion before attaining the formless <em>samādhi</em>s. [<a href="#ref5">back</a>]</p></li>
 <li id="n6"><p><em>mental <em>samādhi</em> that’s without perception</em>. C. 無想心定, P/S. <em>animitta cetosamādhi</em>. It’s possible that 想 here was confused with 相, as the two words are homophones and close in meaning (相 means “sign, appearance” and 想 means “idea, notion, concept”) There is therefore a strong temptation to correct the C. reading of 無想 (“without perceptions”) to 無相 (“without signs”). This is because the parallels in P. sources (e.g., MN 121), later C. Abhidharma sources (e.g., the <cite>Mahāvibhāṣā</cite>), and the <cite>Saṃyukta Āgama</cite> all agree that this meditative state was <em>animitta cetosamādhi</em>. But there are a couple problems that stop me from amending the word in my translation here.</p> 
 <p>First, MĀ was not in the same canonical tradition as SĀ or Xuanzang’s translations. It’s parallel passages often disagree with those Sarvāstivāda texts, so I’ve come to resist reflexively correcting it to reflect those readings.</p>
 <p>The second problem is that there is a fair amount of inconsistency regarding the fourth of the formless <em>samādhi</em>s in MĀ. Sometimes, the abode neither with nor without conception (非有想非無想處) is missing, and instead we see something else where we would expect it (cf. MĀ 75, MĀ 82, and MĀ 190). We should also notice the different ways this formless abode was translated in other C. sources: “abode with and without conception” (DĀ and EĀ: 有想無想處), “abode without conception” (MĀ: 無想處), and the more familiar “neither conception nor not conception” (SĀ and MĀ: 非想非非想). Given this inconsistency across many sources, it seems irresponsible to amend passages that may indicate the evolution of this concept in early Buddhist texts. I have therefore left the reading stand as it is. [<a href="#ref6">back</a>]</p></li>
-<li id="n7"><p>This passage appear to make the <em>samādhi</em> that’s without perception equivalent to the fourth formless abode that is usually called “neither with nor without conception (or perception).” Here, it must be discarded to attain liberation from rebirth, so it couldn’t be equivalent to <em>nirvāṇa</em>. [<a href="#ref7">back</a>]</p></li>
+<li id="n7"><p>This passage appears to make the <em>samādhi</em> that’s without perception equivalent to the fourth formless abode that is usually called “neither with nor without conception (or perception).” Here, it must be discarded to attain liberation from rebirth, so it couldn’t be equivalent to <em>nirvāṇa</em>. [<a href="#ref7">back</a>]</p></li>
 </ol>
 <hr/>
 
